[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/CustomizationScreen/TrailSettings.gd" type="Script" id=2]
[ext_resource path="res://ui/CustomizationScreen/SettingsSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/XYPlot/XYPlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ColorPicker/CustomColorPicker.tscn" type="PackedScene" id=5]

[node name="TrailSettings" type="VBoxContainer"]
margin_right = 212.0
theme = ExtResource( 1 )
custom_constants/separation = 5
script = ExtResource( 2 )

[node name="Particle Amount" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
default_value = 16.0
min_value = 1.0
max_value = 32.0
step = 1.0

[node name="Particle Lifetime" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 30.0
margin_bottom = 55.0
default_value = 1.0
min_value = 0.064
max_value = 2.0
step = 0.001

[node name="HFlowContainer" type="HFlowContainer" parent="."]
margin_top = 60.0
margin_right = 212.0
margin_bottom = 72.0

[node name="InFront" type="CheckButton" parent="HFlowContainer"]
unique_name_in_owner = true
margin_right = 58.0
margin_bottom = 12.0
size_flags_horizontal = 0
text = "in front"

[node name="Local" type="CheckButton" parent="HFlowContainer"]
unique_name_in_owner = true
margin_left = 62.0
margin_right = 106.0
margin_bottom = 12.0
size_flags_horizontal = 0
text = "local"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 77.0
margin_right = 212.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 11.0
text = "Shape"

[node name="Shape" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 31.0
margin_right = 79.0
margin_bottom = 11.0
max_value = 3.0

[node name="HFlowContainer2" type="HFlowContainer" parent="."]
margin_top = 93.0
margin_right = 212.0
margin_bottom = 155.0

[node name="Direction" parent="HFlowContainer2" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 62.0
always_max = true
default_value = Vector2( 0, -1 )

[node name="Direction Spread" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 160.0
margin_bottom = 185.0
max_value = 180.0
step = 1.0

[node name="Initial Velocity" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 190.0
margin_bottom = 215.0
default_value = 20.0
min_value = -100.0
step = 0.1

[node name="Initial Velocity Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 220.0
margin_bottom = 245.0
max_value = 1.0
step = 0.001

[node name="Start Scale" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 250.0
margin_bottom = 275.0
default_value = 1.0
max_value = 5.0

[node name="End Scale" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 280.0
margin_bottom = 305.0
default_value = 1.0
max_value = 5.0

[node name="Scale Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 310.0
margin_bottom = 335.0
max_value = 1.0

[node name="Speed Scale" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 340.0
margin_bottom = 365.0
default_value = 2.0
min_value = 0.1
max_value = 10.0

[node name="Gravity X" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 370.0
margin_bottom = 395.0
min_value = -100.0
step = 0.1

[node name="Gravity Y" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 400.0
margin_bottom = 425.0
min_value = -100.0
step = 0.1

[node name="Explosiveness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 430.0
margin_bottom = 455.0
max_value = 1.0

[node name="Rect Size X" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 460.0
margin_bottom = 485.0
default_value = 12.0
max_value = 32.0

[node name="Rect Size Y" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 490.0
margin_bottom = 515.0
default_value = 12.0
max_value = 32.0

[node name="X Offset" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 520.0
margin_bottom = 545.0
min_value = -24.0
max_value = 24.0

[node name="Y Offset" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 550.0
margin_bottom = 575.0
min_value = -24.0
max_value = 24.0

[node name="Lifetime Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 580.0
margin_bottom = 605.0
default_value = 0.5
max_value = 1.0

[node name="Linear Accel" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 610.0
margin_bottom = 635.0
min_value = -100.0
step = 0.1

[node name="Linear Accel Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 640.0
margin_bottom = 665.0
max_value = 1.0
step = 0.001

[node name="Radial Accel" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 670.0
margin_bottom = 695.0
min_value = -100.0
step = 0.1

[node name="Radial Accel Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 700.0
margin_bottom = 725.0
max_value = 1.0
step = 0.001

[node name="Tangential Accel" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 730.0
margin_bottom = 755.0
min_value = -100.0
step = 0.1

[node name="Tangential Accel Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 760.0
margin_bottom = 785.0
max_value = 1.0
step = 0.001

[node name="Orbit Velocity" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 790.0
margin_bottom = 815.0
min_value = -3.0
max_value = 3.0
step = 0.1

[node name="Orbit Velocity Randomness" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 820.0
margin_bottom = 845.0
max_value = 1.0
step = 0.001

[node name="ColorPickers" type="TabContainer" parent="."]
margin_top = 850.0
margin_right = 212.0
margin_bottom = 1070.0
rect_min_size = Vector2( 0, 220 )
tab_align = 0

[node name="StartColor" parent="ColorPickers" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 11.0
margin_right = 0.0
margin_bottom = 0.0

[node name="EndColor" parent="ColorPickers" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 11.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Start Alpha" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 1075.0
margin_bottom = 1100.0
default_value = 1.0
max_value = 1.0
step = 0.001

[node name="End Alpha" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 1105.0
margin_bottom = 1130.0
default_value = 1.0
max_value = 1.0
step = 0.001
